Fix CSS reference and clean up comments

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* 
- * style2.css - Light Theme (Matching Icon Design)
+ * style.css - Light Theme (Matching Icon Design)
  * The icon has a light/off-white background with dark line-art,
  * so this theme uses a similar aesthetic for cohesion.
  */
